Sun Eater 5 in December

--- a/_posts/2021-12-21-book-releases-2022.md
+++ b/_posts/2021-12-21-book-releases-2022.md
@@ -17,3 +17,4 @@ categories: books
 | All the Seas of the World | Guy Gavriel Kay | May 17 | [\(Audible\)](https://www.audible.com/pd/All-the-Seas-of-the-World-Audiobook/B09FWP41GZ?qid=1640120894&sr=1-1&ref=a_search_c3_lProduct_1_1&pf_rd_p=83218cca-c308-412f-bfcf-90198b687a2f&pf_rd_r=DBFFSEWFHKG0NCX6PXW8) [\(Goodreads\)](https://www.goodreads.com/book/show/58245889-all-the-seas-of-the-world?ac=1&from_search=true&qid=Ix57QtQVJU&rank=1) |
 | Into the Narrowdark | Tad Williams | July | |
 | Navigator's Children | Tad Williams | October | |
+| Sun Eater #5 | Ruocchio| December | |
